[tool.poetry]
name = "diy-llm-qa-bot"
version = "0.1.0"
description = ""
authors = ["juanlamadrid20 <enlightendevio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
openai = "^0.28.0"
faiss-cpu = "^1.7.4"
typing-inspect = "^0.9.0"
tiktoken = "^0.4.0"
typing-extensions = "^4.7.1"
langchain = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
